# stable-gimpfusion3

./: .gitignore  README.md  api_example.json  pyproject.toml  sg_constants.py  sg_gtk_utils.py  sg_i18n.py  sg_proc_arguments.py  sg_structures.py  sg_utils.py  stable-gimpfusion3.py  update-translations.sh
locale/: stable-gimpfusion3.pot
locale/en/LC_MESSAGES/: stable-gimpfusion3.po
locale/it/LC_MESSAGES/: stable-gimpfusion3.po
locale/ru/LC_MESSAGES/: stable-gimpfusion3.po
sg_plugins/: __init__.py  config.py  config_controlnet.py  generation_base.py  img2img.py  inpainting.py  layerinfo.py  txt2img.py
